src/components/header/header.css
header {
  background-color: #222;
  padding: 15px;
  height: fit-content;
  color: rgb(0, 0, 0);
  position: relative;
  top: 0;
  right: 0;
  text-align: center;
}

h2 {
	margin: -30px 0 0 150px;
	color: rgb(255, 234, 42);
	font-size: 140%;
	font-weight: 400;
}

h1 {
  font-size: 2.5em;
  color: white;
  margin: 5px 0 0 80px;
  text-align: start;
	padding: 0;
}

button.logout-button {
	width: 95px;
	height: 45px;
	padding: 10px;
	background: rgb(19, 96, 102);
	color: white;
	font-size: 18px;
	margin: 20px 0;
	border-radius: 3px;
}

button.collection-button{
	width: 100px;
	height: 45px;
	padding: 10px;
	background: rgb(19, 96, 102);
	color: white;
	font-size: 18px;
	margin: 20px 0;
	border-radius: 3px;
}

button:hover {
	background: rgb(119, 151, 154);
	color: black;
	cursor: pointer;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {

	button.logout-button {

	}

} 

